--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
 	<script src="object-capabilities/TextContainerBehavior.js" crossorigin="anonymous"></script>
 	<script src="Extensions/3D/HemisphereLight.js" crossorigin="anonymous"></script>
 	<script src="Extensions/Effects/black-and-white-pixi-filter.js" crossorigin="anonymous"></script>
+	<script src="Extensions/Effects/outline-pixi-filter.js" crossorigin="anonymous"></script>
+	<script src="Extensions/Effects/pixi-filters/filter-outline.js" crossorigin="anonymous"></script>
 	<script src="Extensions/Effects/pixi-filters/filter-shockwave.js" crossorigin="anonymous"></script>
 	<script src="Extensions/Effects/shockwave-pixi-filter.js" crossorigin="anonymous"></script>
 	<script src="code0.js" crossorigin="anonymous"></script>
