--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 	<script src="gdjs-evtsext__panelspriteslider__buttonfsm.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__panelspriteslider__panelspriteslider.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__panelspriteslider__slider.js" crossorigin="anonymous"></script>
+	<script src="gdjs-evtsext__spritetoggleswitch__buttonfsm.js" crossorigin="anonymous"></script>
+	<script src="gdjs-evtsext__spritetoggleswitch__spritetoggleswitch.js" crossorigin="anonymous"></script>
+	<script src="gdjs-evtsext__spritetoggleswitch__switchfsm.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__timeformatter__secondstohhmmss-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__timeformatter__secondstohhmmss000-func.js" crossorigin="anonymous"></script>
 	<script src="Extensions/AdvancedWindow/electron-advancedwindowtools.js" crossorigin="anonymous"></script>
