--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 
         
 	</style>
+	<script>
+		let wakeLock = null;
+		try {
+			wakeLock = await navigator.wakeLock.request("screen");
+			console.log("Wake Lock is active!");
+		} catch (err) {
+			console.log(`${err.name}, ${err.message}`);
+		}
+	</script>
     <!-- Libs and GDJS core files : -->
 		<script src="libs/jshashtable.js" crossorigin="anonymous"></script>
 	<script src="logger.js" crossorigin="anonymous"></script>
