--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
         
 	</style>
 	<script>
-		let wakeLock = null;
-		try {
-			wakeLock = await navigator.wakeLock.request("screen");
-			console.log("Wake Lock is active!");
-		} catch (err) {
-			console.log(`${err.name}, ${err.message}`);
-		}
+		const requestWakeLock = async () => {
+			try {
+			wakeLock = await navigator.wakeLock.request('screen');
+				console.log(`Successful Wake Lock.`);
+
+			} catch (err) {
+				console.log(`${err.name}, ${err.message}`);
+			}
+  		}
+		requestWakeLock();
+		addEventListener("load", (event) => requestWakeLock());
 	</script>
     <!-- Libs and GDJS core files : -->
 		<script src="libs/jshashtable.js" crossorigin="anonymous"></script>
